# src/infrastructure/repository/game/gameGateway.ts
@@ -5,7 +5,7 @@ export class GameGateway {
   async findLatest(conn: mysql.Connection) {
     // 最新の対戦を取得
     const gameSelectResult = await conn.execute<mysql.RowDataPacket[]>(
-      "SELECT id, started_at FROM games ORDER BY id DESC LIMIT 1"
+      "SELECT id, room_id, started_at FROM games ORDER BY id DESC LIMIT 1"
     );
     const game = gameSelectResult[0][0];
 
@@ -13,17 +13,36 @@ export class GameGateway {
       throw new Error("対戦が見つかりませんでした");
     }
 
-    return new GameRecord(game.id, game.started_at);
+    return new GameRecord(game.id, game.roomId, game.started_at);
   }
 
-  async insert(conn: mysql.Connection, startedAt: Date): Promise<GameRecord> {
+  async find(conn: mysql.Connection, id: number) {
+    // 対戦を取得
+    const gameSelectResult = await conn.execute<mysql.RowDataPacket[]>(
+      "SELECT id, room_id, started_at FROM games WHERE id = ?",
+      [id]
+    );
+    const game = gameSelectResult[0][0];
+
+    if (!game) {
+      throw new Error("対戦が見つかりませんでした");
+    }
+
+    return new GameRecord(game.id, game.roomId, game.started_at);
+  }
+
+  async insert(
+    conn: mysql.Connection,
+    roomId: number,
+    startedAt: Date
+  ): Promise<GameRecord> {
     const gameInsertResult = await conn.execute<mysql.ResultSetHeader>(
-      "INSERT INTO games (started_at) VALUES (?)",
-      [startedAt]
+      "INSERT INTO games (room_id, started_at) VALUES (?, ?)",
+      [roomId, startedAt]
     );
 
     const gameId = gameInsertResult[0].insertId;
 
-    return new GameRecord(gameId, startedAt);
+    return new GameRecord(gameId, roomId, startedAt);
   }
 }
